<resources>
    <string name="app_name">NextClickEcommerce</string>
    <string name="welcome">Welcome to NextClick</string>
    <string name="btn_customer_login">Customer Login</string>
    <string name="btn_continue">Continue</string>
    <string name="txt_email">Enter email id </string>
    <string name="txt_pass">Enter password </string>
    <string name="btn_login">Login </string>
    <string name="add_product">Add Product </string>
    <string name="description">Description</string>
    <string name="name">name</string>
    <string name="rate">Rate</string>
    <string name="todo">TODO</string>
    <string name="add_image">Add Image</string>
    <string name="save">Save</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="place_order">Place Order</string>
    <string name="textview">TextView</string>
    <string name="total_price">Total Price</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_payment_option">Choose Payment Option</string>
    <string name="order_place_successfully">Order Placed Successfully</string>
</resources>